syntax = "proto3";

package aham.investor;

option go_package = "aham/investor";
option csharp_namespace = "AHAM.Services.Investor.Grpc";

import "google/api/annotations.proto";
import "dto.proto";

service InvestorService {
  rpc GetRebates(GetRebatesRequest) returns (GetRebatesResponse) {
    option (google.api.http) = {
      get : "/rebates"
    };
  }

  rpc CreateRebate(CreateRebateRequest) returns (CreateRebateResponse) {
    option (google.api.http) = {
      post : "/rebate/create"
      body : "*"
    };
  }
}

message GetRebatesRequest {
  string investor_id = 1;
  string coa = 2;
  int32 index = 3;
  int32 size = 4;
  int32 from = 5;
}

message GetRebatesResponse { 
  repeated aham.dto.FeeRebateDTO rebates = 1; 
  int32 page_count = 2;
}

message CreateRebateRequest {
  string investor_id = 1;
  repeated aham.dto.FeeRebateDTO rebates = 2;
}

message CreateRebateResponse {
  bool status = 1;
  string message = 2;
}
